fix Contact word getting cut off

--- a/Code/style.css
+++ b/Code/style.css
@@ -13,10 +13,10 @@ nav {
     align-items: center;
     padding: 10px 20px;
     backdrop-filter: blur(14px);
-    width: 100%;
     background: rgba(10, 10, 10, 0.6);
     justify-content: space-between;
     box-shadow: 0 2px 24px rgba(0, 0, 0, 0.3);
+
 }
 
 a {
